<resources>
    <string name="app_name">Syrian Geeks</string>
    <string name="entro">من هنا يبدأ المستقلون رحلتهم</string>

    <string name="mail">البريد الالكتروني</string>
    <string name="old_password">كلمة السر القديمة</string>
    <string name="password">كلمة السر</string>
    <string name="Login">تسجيل دخول</string>
    <string name="Forgotyourpassword">نسيت كلمة السر ?</string>
    <string name="Idonthaveaccount">لا تملك حساب ؟ </string>
    <string name="createaccount">قم بإنشاء حساب</string>
    <string name="or">أو</string>
    <string name="LoginAsGuest">تسجيل دخول كضيف</string>
    <string name="about">حول</string>
    <string name="address">العنوان</string>


    <string name="signup">إنشاء حساب</string>
    <string name="Ihaveaccount">لدي حساب بالفعل ؟ </string>
    <string name="useaccount">قم بتسجيل الدخول</string>
    <string name="next">التالي</string>
    <string name="back">السابق</string>

    <string name="name">الاسم</string>
    <string name="nameinenglish">الاسم باللغة الانكليزية</string>
    <string name="nameinarabic">الاسم باللغة العربية</string>
    <string name="brithday">تاريخ الميلاد</string>
    <string name="specialneeds">هل تعرف نفسك من ذوي الاحتياجات الخاصة</string>
    <string name="gender">الجنس</string>
    <string name="study">التعليم</string>
    <string name="work">مجال العمل</string>
    <string name="JobTitle">المسمى الوظيفي</string>
    <string name="numberofexp">عدد سنوات الخبرة</string>
    <string name="nationality">الجنسية</string>
    <string name="freework">هل عملت كمستقل/عامل حر من قبل</string>
    <string name="file">ملف السية الذاتية</string>
    <string name="country">دولة الإقامة</string>
    <string name="city">المدينة</string>
    <string name="palce">المنطقة</string>
    <string name="state">حالة الاقامة</string>

    <string name="institute">المعهد</string>
    <string name="program">البرنامج</string>
    <string name="dgree">الدرجة</string>
    <string name="startDate">تاريخ البدء</string>
    <string name="endDate">تاريخ الانتهاء</string>
    <string name="descp">الوصف</string>

    <string name="phone">رقم الهاتف</string>
    <string name="repassword">تأكيد كلمة السر</string>
    <string name="Subscribetoournewsletter">الاشتراك في نشرتنا البريدية</string>
    <string name="Iagreeto">أوافق على</string>
    <string name="privacypolicy">سياسة الخصوصية</string>
    <string name="sessionDate">تاريخ الجلسة</string>
    <string name="sessionTime">وقت الجلسة</string>
    <string name="currentlystudyinghere">أدرس حاليًا هنا</string>


    <string-array name="nationality_options">
        <item>سوري</item>
        <item>غير ذلك</item>
    </string-array>
    <string-array name="gender_options">
        <item>ذكر</item>
        <item>انثى</item>
    </string-array>

    <string-array name="yesno_options">
        <item>لا</item>
        <item>نعم</item>
    </string-array>

    <string-array name="ed_options">
        <item>ابتدائي</item>
        <item>اعدادي</item>
        <item>ثانوي</item>
        <item>المعهد</item>
        <item>جامعي</item>
        <item>دراسات عليا</item>
    </string-array>

    <string-array name="work_options">
        <item>صانع محتوى</item>
        <item>مبرمج ويب</item>
        <item>مصمم جرافيكي</item>
        <item>غير ذلك</item>
    </string-array>

    <string-array name="state_options">
        <item>مقيم</item>
        <item>نازح</item>
    </string-array>


    <string name="Resetpassword">إعادة تعيين كلمة المرور</string>
    <string name="ResetpasswordText">من فضلك قم بإدخال بريدك الالكتروني لتتمكن من إعادة تعيين كلمة المرور</string>
    <string name="sure">تأكيد</string>
    <string name="Resure">اعادة ارسال</string>

    <string name="activeCode">كود التفعيل</string>
    <string name="activeCodeText">قد قمنا بإرسال رمز التفعيل للبريد الالكتروني الخاص بك</string>
    <string name="Setnewpassword">تعيين كلمة مرور جديدة</string>
    <string name="newpasswordsecurity">من فضلك قم بتعيين كلمة مرور جديدة و تأكد أنها تختلف عن السابقة من أجل أمانك</string>
    <string name="Updatepassword">تحديث كلمة المرور</string>

    <string name="pages">الصفحات</string>
    <string name="dashboard">لوحة القيادة</string>
    <string name="myprofile">ملفي الشخصي</string>
    <string name="Mycourses">دوراتي</string>
    <string name="CourseActivities">أنشطة الدورة</string>
    <string name="Certificates">الشهادات</string>
    <string name="Reference">المرجعية</string>
    <string name="Leaderboard">جدول المتصدرين</string>
    <string name="vision">رؤية</string>
    <string name="Whoweare">من نحن</string>
    <string name="Signout">تسجيل الخروج</string>
    <string name="exit">الخروج</string>
    <string name="Notifications">الإشعارات</string>
    <string name="evetdis">تفاصيل الفعالية</string>
    <string name="blogdis">تفاصيل المدونة</string>
    <string name="Traindis">تفاصيل التدريب</string>
    <string name="people">المجتمع</string>
    <string name="Whoare">من نحن</string>
    <string name="profile">الملف الشخصي</string>

    <string name="search">ابحث عن دورة , مقالة أو مهارة </string>
    <string name="main">الرئيسية</string>
    <string name="Blog">المدونة</string>
    <string name="society">المجتمع</string>
    <string name="Events">الفعاليات</string>
    <string name="Discoverthecourses">اكتشف الدورات</string>
    <string name="Myactivities">أنشطتي</string>
    <string name="Typewhatyouwantsearchfor">اكتب ما تود البحث عنه</string>
    <string name="Trainings">التدريبات</string>
    <string name="Showall">عرض الكل</string>

    <string name="Profile">الملف الشخصي</string>
    <string name="Copyprofilelink">\tنسخ رابط الملف الشخصي\t</string>
    <string name="changepassword">\tتغيير كلمة المرور\t</string>

    <string name="Loggedinsuccessfully">تم تسجيل الدخول بنجاح</string>
    <string name="FailedtoloaddataChecknetwork">فشلت العملية الرجاء التاكد من الشبكة</string>
    <string name="Passwordisveryshort">يجب ان تكون كلمة السر اكثر من 6 محارف</string>
    <string name="fillEmail">الرجاء ادخال البريد الالكتروني</string>
    <string name="like">انا مهتم في الحضور</string>
    <string name="ilike">مهتم بالحضور</string>

    <string name="Lastvisited">آخر ما تمت زيارته</string>
    <string name="ViewCertificate">عرض الشهادة</string>
    <string name="Recordedcourses">الدورات المسجلة</string>
    <string name="lookrecentlearning">نظرة على تعلمك الأخير</string>

    <string name="tab_text_1">نظرة عامة</string>
    <string name="tab_text_2">منهج التدريب</string>
    <string name="tab_text_3">المتطلبات</string>
    <string name="Askquestion">اطرح سؤالاً</string>
    <string name="Replytothediscussion">رد على المناقشة</string>
    <string name="institutestilte">تفاصيل تعليم</string>
    <string name="expertise">تفاصيل خبرة</string>
    <string name="public_expertise">خبرة</string>
    <string name="typeofemployment">نوع التوظيف</string>
    <string name="Companyname">اسم الشركة</string>
    <string name="thesite">الموقع</string>
    <string name="sitetype">نوع الموقع</string>
    <string name="currentlyworkrole">أعمل حاليًا في هذا الدور</string>
    <string name="addskill">اضافة مهارة</string>
    <string name="skill">مهارة</string>
    <string name="public_skill">مهارات</string>
    <string name="social_skill"> وسائل التواصل الاجتماعي </string>
    <string name="addlink">اضافة روابط التواصل</string>
    <string name="link">روابط التواصل الاجتماعي</string>


    <string-array name="work_type">
        <item>وقت كامل</item>
        <item>وقت جزئي</item>
        <item>تدريب</item>
        <item>تطوع</item>
        <item>عقد</item>
        <item>مؤقت</item>
    </string-array>

    <string-array name="site_type">
        <item>هجين</item>
        <item>عن بُعد</item>
    </string-array>

    <string name="tabus_text_1">Syrian Geeks</string>
    <string name="tabus_text_2">تواصل معنا</string>
    <string name="tabus_text_3">سياسة الخصوصية</string>

    <string name="message">الرسالة</string>
    <string name="subject">الموضوع</string>

    <string name="Requestguidance">طلب إرشاد/استشارة</string>

    <string name="privacy_policy">
        1- قد نقوم بجمع معلومات شخصية معينة من المستخدمين من أجل توفير تجربة تعليمية محسنة. تشمل أنواع المعلومات التي قد نجمعها ما يلي:\n
        1.1. معلومات شخصية:\n
        الاسم الكامل\n
        عنوان البريد الإلكتروني\n
        بيانات المتصل\n
        اسم المستخدم و كلمة السر\n
        1.2. المعلومات المتعلقة بالدورة:\n
        تفضيلات الدورة\n
        بيانات التقدم والأداء\n
        سجلات إتمام الدورة\n
        ردود الفعل والتقييمات\n
        استخدام المعلومات المجمعة\n
        2- يجوز لنا استخدام المعلومات التي تم جمعها للأغراض التالية:\n
        2.1. تقديم خدمات نظام إدارة التعلم:\n
        إنشاء وإدارة حسابات المستخدمين\n
        تقديم محتوى الدورة والمواد\n
        تتبع ومراقبة تقدم المستخدم\n
        توليد التقارير والتحليلات\n
        2.2. تواصل:\n
        إرسال رسائل البريد الإلكتروني والإخطارات الإدارية\n
        الرد على استفسارات المستخدمين وطلبات الدعم\n
        إرسال محتوى ترويجي أو تعليمي\n
        2.3. تحسين تجربة المستخدم:\n
        تخصيص توصيات الدورة والمحتوى\n
        تحليل سلوك المستخدم وتفضيلاته\n
        تعزيز وظائف وميزات نظام\n
        مشاركة المعلومات\n
        3- نحن ندرك أهمية حماية المعلومات الشخصية ولا نبيع أو نتاجر أو نؤجر المعلومات الشخصية للمستخدمين لأطراف ثالثة. ومع ذلك، يجوز لنا مشاركة بعض المعلومات في ظل الظروف التالية:\n
        يجوز لنا مشاركة المعلومات الشخصية مع مقدمي خدمات خارجيين موثوقين يساعدوننا في تشغيل . يلتزم مقدمو الخدمات هؤلاء باتفاقيات سرية صارمة ويحق لهم استخدام المعلومات فقط لغرض تقديم الخدمات لنا.\n
        3.2. الامتثال القانوني:\n
        يجوز لنا الكشف عن المعلومات الشخصية إذا كان ذلك مطلوبًا بموجب القانون أو استجابة لطلبات قانونية صحيحة أو إجراءات قانونية.\n
        امن البيانات\n
        4- نحن نتخذ إجراءات معقولة لحماية أمن المعلومات الشخصية التي يتم جمعها من خلال المنصة الخاصة بنا. ومع ذلك، يرجى ملاحظة أنه لا توجد طريقة آمنة تمامًا للنقل أو التخزين، ولا يمكننا ضمان الأمان المطلق لبياناتك. نحن نشجع المستخدمين على اتخاذ خطوات لحماية معلوماتهم الشخصية، مثل استخدام كلمات مرور قوية والحفاظ على سريتها.\n
        روابط الطرف الثالث\n
        5- قد تحتوي المنصة الخاصة بنا على روابط لمواقع أو موارد تابعة لجهات خارجية. نحن لسنا مسؤولين عن ممارسات الخصوصية أو محتوى مواقع الطرف الثالث هذه. نحن نشجع المستخدمين على مراجعة سياسات الخصوصية لتلك المواقع عند الوصول إليها من خلال منصتنا.\n
        خصوصية الاطفال\n
        6- إن منصة Syrian Geeks الخاصة بنا ليست مخصصةً للاستخدام من قبل الأطفال الذين تقل أعمارهم عن 13 عامًا. ونحن لا نجمع معلومات شخصية من الأطفال عمدًا. إذا علمنا أن المعلومات الشخصية قد تم جمعها عن غير قصد من طفل يقل عمره عن 13 عامًا، فسنتخذ خطوات معقولة لحذف هذه المعلومات من سجلاتنا.\n
        التغييرات في سياسة الخصوصية\n
        7- نحن نحتفظ بالحق في تعديل سياسة الخصوصية هذه في أي وقت. ستصبح أي تغييرات سارية فور نشر سياسة الخصوصية المحدثة على منصة(SyrianGeeks) الخاصة بنا. من خلال الاستمرار في استخدام منصة Syrian Geeks بعد إجراء أي تعديلات، فإنك توافق على الالتزام بسياسة الخصوصية المعدلة.\n
        اتصل بنا\n
        8- إذا كانت لديك أي أسئلة أو مخاوف بشأن سياسة الخصوصية هذه أو ممارسات البيانات لدينا، فيرجى الاتصال بنا.\n
    </string>

</resources>