<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ForgotPasswordActivity.ForgotPasswordActivity">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/back_bar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/Resetpassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/ResetpasswordText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/dinnextltarabicregular"
                android:text="@string/mail" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">

                <ProgressBar
                    android:id="@+id/mainprogress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/shap_1"
                    android:indeterminateDrawable="@drawable/cpb_1"
                    android:indeterminateDuration="@android:integer/config_longAnimTime"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btuSure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_rectangle_142"
                    android:fontFamily="@font/dinnextltarabicregular"
                    android:text="@string/sure" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>