<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.SignupActivity.SignupActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="TODO"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.shuhart.stepview.StepView
            android:id="@+id/step_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:sv_animationType="Line"
            app:sv_doneCircleColor="@color/my_light_primary"
            app:sv_doneCircleRadius="12dp"
            app:sv_doneStepLineColor="@color/my_light_primary"
            app:sv_doneStepMarkColor="@color/white"
            app:sv_nextStepLineColor="@color/my_light_primary"
            app:sv_nextTextColor="@color/my_light_primary"
            app:sv_selectedCircleColor="@color/my_light_primary"
            app:sv_selectedCircleRadius="12dp"
            app:sv_selectedStepNumberColor="@color/white"
            app:sv_selectedTextColor="@color/my_light_primary"
            app:sv_stepLineWidth="1dp"
            android:layout_weight="0"
            app:sv_stepNumberTextSize="12sp"
            app:sv_stepPadding="4dp"

            app:sv_typeface="@font/dinnextltarabicregular" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btuNext"
                style="@style/Theme.SyrianGeeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_142"
                android:fontFamily="@font/dinnextltarabicregular"
                android:text="@string/next" />

            <Button
                android:id="@+id/btuBack"
                style="@style/Theme.SyrianGeeks.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:text="@string/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layoutDirection="ltr"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btuLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/dinnextltarabicregular"
                android:theme="@style/Theme.SyrianGeeks.Text"
                android:text="@string/useaccount" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/dinnextltarabicregular"
                android:text="@string/Ihaveaccount" />

        </LinearLayout>


    </LinearLayout>
</layout>