<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".ui.SignupActivity.ForthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/mail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/ic_path_2480"
            android:fontFamily="@font/dinnextltarabicregular"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:text="+963"
                android:textAlignment="center"
                android:inputType="phone"
                android:paddingHorizontal="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:hint="@string/phone"
                android:textAlignment="center"
                android:inputType="phone"
                android:paddingHorizontal="20dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/my_light_primary">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/repassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/my_light_primary">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dinnextltarabicregular"
        android:layoutDirection="rtl"
        android:layout_gravity="right"
        android:text="@string/Subscribetoournewsletter"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_gravity="right"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/dinnextltarabicregular"
            android:text="@string/privacypolicy"
            android:theme="@style/Theme.SyrianGeeks.Text" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dinnextltarabicregular"
            android:layoutDirection="rtl"
            android:layout_gravity="right"
            android:text="@string/Iagreeto"/>

    </LinearLayout>



</LinearLayout>