<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity.PublicEventsFragment">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/back_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:autofillHints="@string/search"
                android:background="@drawable/ic_path_2480"
                android:fontFamily="@font/dinnextltarabicregular"
                android:hint="@string/Typewhatyouwantsearchfor"
                android:inputType="text"
                android:paddingHorizontal="50dp"
                android:textColorHint="@color/textColorHint" />

            <ImageButton
                android:id="@+id/toolbar_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/editText"
                android:layout_alignBottom="@+id/editText"
                android:layout_alignParentEnd="@+id/editText"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/search" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/public_events_item"/>

            <ProgressBar
                android:id="@+id/mainprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/cpb_2"
                android:indeterminateDuration="@android:integer/config_longAnimTime"
                android:visibility="visible" />
        </RelativeLayout>


    </LinearLayout>
</layout>